<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Title" >

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SENSORSELECT" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/accelerometerbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ACCELEROMETER" />

            <Button
                android:id="@+id/gravitybutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GRAVITY" />

            <Button
                android:id="@+id/gyroscopebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GYROSCOPE" />

            <Button
                android:id="@+id/linearaccelerationbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LINEARACCELERATION" />

            <Button
                android:id="@+id/magneticfieldbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MAGNETICFIELD" />

            <Button
                android:id="@+id/temperaturebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TEMPERATURE" />

            <Button
                android:id="@+id/lightbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LIGHT" />

            <Button
                android:id="@+id/orientationbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ORIENTATION" />

            <Button
                android:id="@+id/proximitybutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PROXIMITY" />

            <Button
                android:id="@+id/exitbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EXIT" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>